--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,8 +3,6 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY . /app
-
 RUN apt-get update && apt-get install -y \
 	libglib2.0-0 \
 	libsm6 \
@@ -12,6 +10,9 @@ RUN apt-get update && apt-get install -y \
     libgl1 \
 	libxrender-dev
 
+COPY ./requirements.txt /app
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
+
+COPY . /app
 
 ENTRYPOINT ["/app/core/run.sh"]
