--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-# docker-compose.yaml
-
 version: '3'
 services:
   compare-app:
@@ -12,7 +10,9 @@ services:
       PORT: 3000
       BACKEND_URL: http://backend:8000
   backend:
-    ports:
-      - "8000:8000"
     build:
       context: ./server
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./server/database:/database
